<resources>
    <string name="app_name">Smart Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lecturer">Lecturer</string>
    <string name="login">Login</string>
    <string name="student">Student</string>
    <string name="todo">TODO</string>
    <string name="start">Start</string>
    <string name="timetable">Timetable</string>
    <string name="settings">Settings</string>
    <string name="lecturer_menu">Lecturer Menu</string>
    <string name="student_menu">Student Menu</string>
    <string name="scan">Scan</string>
    <string name="you_are_attending_the_lecture">You are attending the Lecture</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="smart_attendance">Smart Attendance</string>

    <color name="background_color">#393b57</color>
    <color name="button_color_main">#395751</color>
    <color name="button_color_secondary">#574e39</color>
</resources>