<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartAttendance.LecturerLogged">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="407dp"
        android:layout_height="731dp"
        android:background="#fffeaa0c"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="560dp"
        android:text="@string/smart_attendance"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/StartLecture"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="340dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"></Button>

    <TextView
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="632dp"
        android:text="@string/lecturer_menu"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"></TextView>

    <Button
        android:id="@+id/SettingsLecturer"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:text="@string/settings"
        android:textColor="#FBC02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        tools:ignore="TextContrastCheck"></Button>

    <Button
        android:id="@+id/TimetableStudent"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:text="@string/timetable"
        android:textColor="#FBC02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617"
        tools:ignore="TextContrastCheck"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>