<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.smartAttendance.lecturer.LecturerLogged">

    <TextView
        android:id="@+id/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_attendance"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="144dp" />

    <Button
        android:id="@+id/StartLecture"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteY="343dp"></Button>

    <TextView
        android:id="@+id/menu_user_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecturer_menu"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="72dp"></TextView>

    <Button
        android:id="@+id/SettingsLecturer"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:text="@string/settings"
        android:textColor="#FBC02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        tools:ignore="TextContrastCheck"></Button>

    <Button
        android:id="@+id/TimetableStudent"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:text="@string/timetable"
        android:textColor="#FBC02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617"
        tools:ignore="TextContrastCheck"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>