<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.smartAttendance.student.StudentStart">

    <TextView
        android:id="@+id/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_attendance"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/menu_user_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_menu"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="72dp"></TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="73dp"
        android:layout_height="72dp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="505dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:text="@string/you_are_attending_the_lecture"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="613dp" />

    <Button
        android:id="@+id/LeaveLecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Geofence detected"
        android:visibility="visible"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="412dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/EndClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Class"
        android:visibility="visible"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="412dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>